[workspace]
resolver = "2"
members = ["api", "program", "sdk", "src", "vrf", "vrf-cli", "vrf-oracle"]

[workspace.package]
version = "0.3.1"
edition = "2021"
license = "Business Source License 1.1"
authors = ["MagicBlock Labs <dev@magicblock.xyz>"]
homepage = "https://www.magicblock.xyz/"
documentation = "https://docs.magicblock.xyz/"
repository = "https://github.com/magicblock-labs/ephemeral-vrf"
readme = "./README.md"
keywords = ["solana", "vrf", "ephemeral-rollups", "magicblock"]

[workspace.dependencies]
anchor-lang = { version = ">=0.28.0" }
anchor-lang-compat = { package = "anchor-lang", version = ">=0.28.0, <1.0.0" }
anchor-lang-current = { package = "anchor-lang", version = "1.0" }
anyhow = "1.0"
async-trait = "0.1.88"
base64 = "0.22.1"
bincode = "1.3.3"
borsh = "1.5"
borsh-compat = { package = "borsh", version = "0.10.4" }
borsh-current = { package = "borsh", version = "1.5" }
bytemuck = "1.14"
clap = { version = "4.4", features = ["derive", "env"] }
crossbeam-channel = "0.5.15"
curve25519-dalek = { version = "4.1.3", default-features = false }
env_logger = "0.11.7"
ephemeral-rollups-sdk = { git = "https://github.com/magicblock-labs/ephemeral-rollups-sdk.git", rev = "d18519044255bd425dec7c0ee725267a970abd65" }
ephemeral-vrf = { path = "./vrf" }
ephemeral-vrf-api = { path = "./api" }
ephemeral-vrf-sdk-vrf-macro = { path = "sdk/vrf-macro", version = "0.3.0" }
futures = "0.3.31"
futures-core = "0.3.31"
futures-util = "0.3.31"
helius-laserstream = "0.1.10"
hkdf = "0.12.4"
hyper = { version = "0.14", features = ["full"] }
log = "0.4"
num_enum = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10.8"
solana-account-decoder = "=3.0.0"
solana-client = "=3.0.0"
solana-commitment-config = "3.1.1"
solana-compute-budget-interface = "3.0.0"
solana-curve25519 = "=3.0.0"
solana-loader-v3-interface = { version = "6.1.0", features = ["serde"] }
solana-program = "3.0.0"
solana-program-compat = { package = "solana-program", version = ">=1.18.26, <3", default-features = false }
solana-program-test = "=3.0.0"
solana-pubkey-compat = { package = "solana-pubkey", version = ">=2.0, <3", features = [
    "borsh",
    "bytemuck",
    "curve25519",
] }
solana-sdk = "=3.0.0"
solana-sdk-ids = "3.1.0"
solana-system-interface = { version = "3.2.0", features = ["bincode"] }
thiserror = "1.0"
tokio = { version = "1.43.0", features = ["full"] }
