[package]
name = "ephemeral-vrf-program"
description = ""
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
documentation.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true

[lib]
crate-type = ["cdylib", "lib"]

[features]
default = []
no-entrypoint = []
test-sbf = ["ephemeral-vrf-api/unit_test_config"]
ephemeral-test-queue = ["ephemeral-vrf-api/ephemeral-test-queue"]

[dependencies]
ephemeral-vrf-api = { workspace = true, features = [] }
ephemeral-rollups-sdk.workspace = true
solana-curve25519.workspace = true
curve25519-dalek.workspace = true
solana-program.workspace = true
solana-system-interface.workspace = true

[dev-dependencies]
ephemeral-vrf = { workspace = true}
solana-program-test = { workspace = true }
solana-sdk = { workspace = true }
solana-compute-budget-interface = { workspace = true }
solana-sdk-ids = { workspace = true }
base64 = {workspace = true}
tokio = { workspace = true, features = ["full"] }
