[package]
name = "ephemeral-vrf-sdk-pinocchio"
description = "ephemeral-vrf-sdk-pinocchio"
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
edition = { workspace = true }
license = "MIT"

[features]
default = []
backward-compat = []

[dependencies]
pinocchio = { workspace = true, features = ["cpi"] }
pinocchio-pubkey = { workspace = true }

[dev-dependencies]
ephemeral-vrf-sdk = { workspace = true }
solana-program = { workspace = true }
